--- a/pages/index.html
+++ b/pages/index.html
@@ -55,7 +55,7 @@
               <li><a href="" aria-label="Contact">Contact</a></li>
             </ul>
           </div>
-          <div>
+          <div class="header-book-btn">
             <a href="" class="btn-book" role="link" aria-label="book now"
               >book now</a
             >
@@ -97,7 +97,7 @@
 
     <!-- compny-contact -->
     <section class="compny-contact">
-      <div class="swiper container">
+      <div class="swiper compny-contact-swiper container">
         <div class="swiper-wrapper flex items-center">
           <div class="swiper-slide">
             <img
@@ -164,68 +164,374 @@
     <!-- compny-contact end -->
 
     <!-- populer-excursions -->
-    <section class="populer-excursions gap-55">
-      <div>
-        <h2 class="h2">most populer excursions</h2>
+    <section class="populer-excursions">
+      <div class="title w-full py-30 xl:mt-55">
+        <h2>most populer excursions</h2>
       </div>
-      <div class="swiper">
+      <div class="swiper populer-excursions-swiper container xl:mt-55">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div>
-              <img src="" alt="" />
-            </div>
-            <div>
-              <div class="text-center">
-                <p class="text-blue font-Prompt font-600">
-                  Whale and Wildlife Adventure - Zodiac Boat
-                </p>
+              <img
+                src="../assets/image/image(1).png"
+                alt="image"
+                width="100%"
+              />
+              <div class="banner">
+                <p>Most populer tour!</p>
               </div>
-              <div></div>
+            </div>
+            <div class="swiper-slide-content">
+              <div class="title-blue-card">
+                <h3>Whale and Wildlife</h3>
+                <h3>Adventure -</h3>
+                <h3>Zodiac Boat</h3>
+              </div>
+              <ul class="flex gap-20">
+                <li>
+                  <img src="../assets/image/clock icon.svg" alt="clock" />
+                  <span>3-4 hours</span>
+                </li>
+                <li>
+                  <img src="../assets/image/age.svg" alt="age" />
+                  <span>Ages 6+</span>
+                </li>
+              </ul>
+              <ul>
+                <li>
+                  <img src="../assets/image/adult.svg" alt="ault" />
+                  <span>Abults Start at $139</span>
+                </li>
+                <li>
+                  <img src="../assets/image/kids.svg" alt="kids" />
+                  <span>kids Start at $99</span>
+                </li>
+              </ul>
+              <div class="flex gap-8 sm:gap-10 mt-5">
+                <a href="" class="btn-more">learn more</a>
+                <a href="" class="btn-book">book now</a>
+              </div>
             </div>
           </div>
           <div class="swiper-slide">
             <div>
-              <img src="" alt="" />
+              <img
+                src="../assets/image/image(2).png"
+                alt="image"
+                width="100%"
+              />
             </div>
-            <div>
-              <div class="text-center">
-                <p class="text-blue font-Prompt font-600">
-                  Whale and Wildlife Adventure - Semi Covered Boat
-                </p>
+            <div class="swiper-slide-content">
+              <div class="title-blue-card">
+                <h3>Whale and Wildlife</h3>
+                <h3>Adventure - Semi</h3>
+                <h3>Covered Boat</h3>
               </div>
-              <div></div>
+              <ul class="flex gap-20">
+                <li>
+                  <img src="../assets/image/clock icon.svg" alt="clock" />
+                  <span>3-4 hours</span>
+                </li>
+                <li>
+                  <img src="../assets/image/age.svg" alt="age" />
+                  <span>Ages 6+</span>
+                </li>
+              </ul>
+              <ul>
+                <li>
+                  <img src="../assets/image/adult.svg" alt="ault" />
+                  <span>Abults Start at $139</span>
+                </li>
+                <li>
+                  <img src="../assets/image/kids.svg" alt="kids" />
+                  <span>kids Start at $99</span>
+                </li>
+              </ul>
+              <div class="flex gap-10 mt-5">
+                <a href="" class="btn-more">learn more</a>
+                <a href="" class="btn-book">book now</a>
+              </div>
             </div>
           </div>
           <div class="swiper-slide">
             <div>
-              <img src="" alt="" />
-            </div>
-            <div>
-              <div class="text-center">
-                <p class="text-blue font-Prompt font-600">
-                  Full Day Whale and Wildlife Adventure - Semi Covered Boat
-                </p>
+              <img
+                src="../assets/image/image(3).png"
+                alt="image"
+                width="100%"
+              />
+              <div class="banner">
+                <p>Includes a 2 hour stop in Friday Harbor!</p>
               </div>
-              <div></div>
+            </div>
+            <div class="swiper-slide-content">
+              <div class="title-blue-card">
+                <h3>Full Day Whale and</h3>
+                <h3>Wildlife Adventure -</h3>
+                <h3>Semi Covered Boat</h3>
+              </div>
+              <ul class="flex gap-20">
+                <li>
+                  <img src="../assets/image/clock icon.svg" alt="clock" />
+                  <span>6-7 hours</span>
+                </li>
+                <li>
+                  <img src="../assets/image/age.svg" alt="age" />
+                  <span>Ages 6+</span>
+                </li>
+              </ul>
+              <ul>
+                <li>
+                  <img src="../assets/image/adult.svg" alt="ault" />
+                  <span>Abults Start at $139</span>
+                </li>
+                <li>
+                  <img src="../assets/image/kids.svg" alt="kids" />
+                  <span>kids Start at $99</span>
+                </li>
+              </ul>
+              <div class="flex gap-10 mt-5">
+                <a href="" class="btn-more">learn more</a>
+                <a href="" class="btn-book">book now</a>
+              </div>
             </div>
           </div>
           <div class="swiper-slide">
             <div>
-              <img src="" alt="" />
+              <img
+                src="../assets/image/image(4).png"
+                alt="image"
+                width="100%"
+              />
             </div>
-            <div>
-              <div class="text-center">
-                <p class="text-blue font-Prompt font-600">
-                  Private Tour Adventures
-                </p>
+            <div class="swiper-slide-content">
+              <div class="title-blue-card">
+                <h3>Private</h3>
+                <h3>Tour</h3>
+                <h3>Adventures</h3>
               </div>
-              <div></div>
+              <ul class="flex xl:gap-20">
+                <li>
+                  <img src="../assets/image/clock icon.svg" alt="clock" />
+                  <span>Pricing Varies</span>
+                </li>
+                <li>
+                  <img src="../assets/image/age.svg" alt="age" />
+                  <span>All Ages</span>
+                </li>
+              </ul>
+              <ul>
+                <li>
+                  <img src="../assets/image/adult.svg" alt="ault" />
+                  <span>Abults Start at $139</span>
+                </li>
+                <li>
+                  <img src="../assets/image/kids.svg" alt="kids" />
+                  <span>kids Start at $99</span>
+                </li>
+              </ul>
+              <div class="flex gap-10 mt-5">
+                <a href="" class="btn-more px-60 sm:px-90 xl:px-110"
+                  >learn more</a
+                >
+              </div>
             </div>
           </div>
         </div>
       </div>
+      <div class="swiper-pagination"></div>
+
+      <img
+        src="../assets/image/wave.png"
+        alt=""
+        class="absolute bottom-0 w-full"
+      />
     </section>
     <!-- populer-excursions end -->
+
+    <!-- our boats -->
+    <section>
+      <div class="our-boats">
+        <div class="boat-contant">
+          <div class="title title-blue">
+            <h2>Our Boats</h2>
+          </div>
+          <div class="content mb-20">
+            <p>
+              We have two unique boats to fit your group's needs! Sounder is our
+              open-air, Zodiac-style vessel. Wake is our semi-enclosed
+              runabout-style vessel. Both boats are fast and fun for reaching a
+              wide variety of locations, which gives us one of the highest whale
+              sighting rates in the Pacific Northwest! Both boats are equipped
+              with onboard restrooms.
+            </p>
+          </div>
+          <div class="mt-20">
+            <a href="" class="btn-more">Read more about our boats</a>
+          </div>
+        </div>
+        <div class="boat-img">
+          <img
+            src="../assets/image/boat.png"
+            alt="boat"
+            width="550"
+            height="400"
+          />
+        </div>
+      </div>
+    </section>
+    <!-- our boats end -->
+
+    <!-- map -->
+    <section class="map">
+      <div class="map-contain">
+        <div class="my-15 xl:mt-30">
+          <h2 class="title text-white">45 minutes</h2>
+          <h4 class="sub-title">From Bellingham</h4>
+        </div>
+        <div class="my-15 xl:mt-30">
+          <h2 class="title text-white">1 hour</h2>
+          <h4 class="sub-title">From Everett</h4>
+        </div>
+        <div class="my-15 xl:mt-30">
+          <h2 class="title text-white">1.5 hours</h2>
+          <h4 class="sub-title">From Seattle</h4>
+        </div>
+      </div>
+      <div class="map-title">
+        <div class="title-map">
+          <h2>Adventure is closer than you think!</h2>
+        </div>
+        <div class="md:px-36">
+          <a href="" class="map-btn"
+            >get directions <img src="../assets/image/more.png" alt=""
+          /></a>
+        </div>
+      </div>
+    </section>
+    <!-- map end -->
+
+    <!-- find gram -->
+    <section class="find-gram">
+      <div class="title title-blue text-center my-30">
+        <h2>Find us on the 'gram</h2>
+        <button class="btn">follow us</button>
+      </div>
+      <div class="grid grid-cols-2 xl:grid-cols-4 gap-2 p-20 xl:ps-70">
+        <img
+          src="../assets/image/find1.png"
+          alt="image"
+          width="363"
+          height="363"
+        />
+        <img
+          src="../assets/image/find2.png"
+          alt="image"
+          width="363"
+          height="363"
+        />
+        <img
+          src="../assets/image/find3.png"
+          alt="image"
+          width="363"
+          height="363"
+        />
+        <img
+          src="../assets/image/find4.png"
+          alt="image"
+          width="363"
+          height="363"
+        />
+      </div>
+    </section>
+    <!-- find gram end -->
+
+    <!--adventure awaits -->
+    <section class="adventure-awaits">
+      <div class="title-adventure">
+        <h2>adventure awaits!</h2>
+      </div>
+      <a href="" class="btn-book">book now</a>
+    </section>
+    <!-- adventure awaits end -->
+
+    <footer class="footer">
+      <div class="grid grid-cols-4 gap-40">
+        <div class="footer-menu">
+          <div class="mb-55">
+            <img src="../assets/image/logo.png" alt="logo" />
+          </div>
+          <div>
+            <div class="content uppercase text-white"><p>socila link</p></div>
+            <ul class="flex gap-40 mt-14">
+              <li>
+                <a href=""
+                  ><img src="../assets/image/instagram icon.png" alt=""
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="../assets/image/youtube icon.png" alt=""
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="../assets/image/facebook icon.png" alt=""
+                /></a>
+              </li>
+              <li>
+                <a href=""
+                  ><img src="../assets/image/tripadvisor icon.png" alt=""
+                /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-menu">
+          <div class="title-footer">
+            <h5>contact info</h5>
+          </div>
+          <div class="footer-dropdown">
+            <ul>
+              <li>phone: <span class="text-yellow">(564) 900-6565</span></li>
+              <li>email: <a href="">info@bluekingdomtours.com</a></li>
+              <li>Address: 2201 Skyline Way #203 Anacortes, WA 98221</li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-menu">
+          <div class="title-footer"><h5>quick links</h5></div>
+          <div class="footer-dropdown">
+            <ul>
+              <li><a href="">Whale and Wildlife Adventure – Zodiac Boat</a></li>
+              <li><a href="">Custom Private Charters</a></li>
+              <li><a href="">About Us</a></li>
+              <li><a href="">Contact</a></li>
+              <li><a href="">Employment Opportunities</a></li>
+              <li><a href="">Privacy Policy</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer-menu">
+          <div class="title-footer">
+            <h5>our newsletter</h5>
+          </div>
+          <div class="contant text-white text-right">
+            <p><span class="text-red">*</span>Indicates Required</p>
+          </div>
+          <form action="">
+            <label for="">Email Address <span class="text-red">*</span></label
+            ><br />
+            <input type="text" /><br />
+            <label for="">First Name</label><br />
+            <input type="text" /><br />
+            <label for="">Last Name</label><br />
+            <input type="text" />
+          </form>
+          <button class="btn-book mt-5">subscribe</button>
+        </div>
+      </div>
+    </footer>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="../assets/js/script.js"></script>
