--- a/pages/index.html
+++ b/pages/index.html
@@ -53,7 +53,7 @@
           <a href="#" class="btn-book" role="link" aria-label="book now">book now</a>
         </div>
         <div id="toggle" class="order-2 xl:order-0">
-          <img src="../assets/image/menu.png" alt="menu" class="block xl:hidden" />
+          <img src="../assets/image/menu.png" alt="menu" class="block xl:hidden" width="28" height="28"/>
         </div>
       </div>
       <div class="header-bottom">
@@ -326,8 +326,7 @@
   <!-- populer-excursions end -->
 
   <!-- our boats -->
-  <section>
-    <div class="our-boats">
+  <section class="our-boats">
       <div class="boat-contant">
         <div class="title title-blue xl:text-left">
           <h2>Our Boats</h2>
@@ -343,13 +342,12 @@
           </p>
         </div>
         <div class="mt-20">
-          <a href="" class="btn-more">Read more about our boats</a>
+          <a href="#" class="btn-more">Read more about our boats</a>
         </div>
       </div>
       <div class="boat-img">
         <img src="../assets/image/boat.png" alt="boat" width="550" height="400" />
       </div>
-    </div>
   </section>
   <!-- our boats end -->
 
