--- a/pages/index.html
+++ b/pages/index.html
@@ -53,7 +53,7 @@
           <a href="#" class="btn-book" role="link" aria-label="book now">book now</a>
         </div>
         <div id="toggle" class="order-2 xl:order-0">
-          <img src="../assets/image/menu.png" alt="menu" class="block xl:hidden" width="28" height="28"/>
+          <img src="../assets/image/menu.png" alt="menu" class="block xl:hidden" width="28" height="28" />
         </div>
       </div>
       <div class="header-bottom">
@@ -160,7 +160,7 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <div class="img">
-            <a href=""><img src="../assets/image/image(1).png" alt="image" width="100%" height="250"/></a>
+            <a href=""><img src="../assets/image/image(1).png" alt="image" width="100%" height="250" /></a>
             <div class="banner">
               <p>Most populer tour!</p>
             </div>
@@ -201,7 +201,7 @@
         </div>
         <div class="swiper-slide">
           <div class="img">
-            <a href=""><img src="../assets/image/image(2).png" alt="image" width="100%" height="250"/></a>
+            <a href=""><img src="../assets/image/image(2).png" alt="image" width="100%" height="250" /></a>
           </div>
           <div class="swiper-slide-content">
             <div class="title-blue-card">
@@ -239,7 +239,7 @@
         </div>
         <div class="swiper-slide">
           <div class="img">
-            <a href=""><img src="../assets/image/image(3).png" alt="image" width="100%" height="250"/></a>
+            <a href=""><img src="../assets/image/image(3).png" alt="image" width="100%" height="250" /></a>
             <div class="banner">
               <p>Includes a 2 hour stop in Friday Harbor!</p>
             </div>
@@ -280,7 +280,7 @@
         </div>
         <div class="swiper-slide">
           <div class="img">
-            <a href=""><img src="../assets/image/image(4).png" alt="image" width="100%" height="250"/></a>
+            <a href=""><img src="../assets/image/image(4).png" alt="image" width="100%" height="250" /></a>
           </div>
           <div class="swiper-slide-content">
             <div class="title-blue-card">
@@ -327,27 +327,27 @@
 
   <!-- our boats -->
   <section class="our-boats">
-      <div class="boat-contant">
-        <div class="title title-blue xl:text-left">
-          <h2>Our Boats</h2>
-        </div>
-        <div class="content mb-20">
-          <p>
-            We have two unique boats to fit your group's needs! Sounder is our
-            open-air, Zodiac-style vessel. Wake is our semi-enclosed
-            runabout-style vessel. Both boats are fast and fun for reaching a
-            wide variety of locations, which gives us one of the highest whale
-            sighting rates in the Pacific Northwest! Both boats are equipped
-            with onboard restrooms.
-          </p>
-        </div>
-        <div class="mt-20">
-          <a href="#" class="btn-more">Read more about our boats</a>
-        </div>
+    <div class="boat-contant">
+      <div class="title title-blue xl:text-left">
+        <h2>Our Boats</h2>
       </div>
-      <div class="boat-img">
-        <img src="../assets/image/boat.png" alt="boat" width="550" height="400" />
+      <div class="content mb-20">
+        <p>
+          We have two unique boats to fit your group's needs! Sounder is our
+          open-air, Zodiac-style vessel. Wake is our semi-enclosed
+          runabout-style vessel. Both boats are fast and fun for reaching a
+          wide variety of locations, which gives us one of the highest whale
+          sighting rates in the Pacific Northwest! Both boats are equipped
+          with onboard restrooms.
+        </p>
       </div>
+      <div class="mt-20">
+        <a href="#" class="btn-more">Read more about our boats</a>
+      </div>
+    </div>
+    <div class="boat-img">
+      <img src="../assets/image/boat.png" alt="boat" width="550" height="400" />
+    </div>
   </section>
   <!-- our boats end -->
 
@@ -381,7 +381,7 @@
             <span class="text-blue font-700">5.0</span>
           </button>
         </div>
-        <div class="tab-content " id="tab1">
+        <div class="tab-content" id="tab1">
           <div class="md:flex justify-between items-center">
             <div class="tab-content-1">
               <div class="tab-title">
@@ -443,7 +443,7 @@
                 <span class="text-black text-12 font-Prompt">(20)</span>
               </div>
             </div>
-            <div class="my-3"><a href="" class="btn-book">review as on tripadvisor</a></div>
+            <div class="my-3"><a href="#" class="btn-book">review as on tripadvisor</a></div>
           </div>
         </div>
       </div>
@@ -614,7 +614,7 @@
         <h2>Adventure is closer than you think!</h2>
       </div>
       <div class="md:px-36">
-        <a href="" class="map-btn">get directions <img src="../assets/image/more.png" alt="more" /></a>
+        <a href="#" class="map-btn">get directions <img src="../assets/image/more.png" alt="more"/></a>
       </div>
     </div>
   </section>
@@ -657,16 +657,16 @@
           </div>
           <ul class="flex gap-40 mt-14">
             <li>
-              <a href=""><img src="../assets/image/instagram icon.png" alt="instagram" /></a>
+              <a href="#"><img src="../assets/image/instagram icon.png" alt="instagram" /></a>
             </li>
             <li>
-              <a href=""><img src="../assets/image/youtube icon.png" alt="youtube" /></a>
+              <a href="#"><img src="../assets/image/youtube icon.png" alt="youtube" /></a>
             </li>
             <li>
-              <a href=""><img src="../assets/image/facebook icon.png" alt="facbook" /></a>
+              <a href="#"><img src="../assets/image/facebook icon.png" alt="facbook" /></a>
             </li>
             <li>
-              <a href=""><img src="../assets/image/tripadvisor icon.png" alt="tripadvisor" /></a>
+              <a href="#"><img src="../assets/image/tripadvisor icon.png" alt="tripadvisor" /></a>
             </li>
           </ul>
         </div>
@@ -689,12 +689,12 @@
         </div>
         <div class="footer-dropdown">
           <ul>
-            <li><a href="">Whale and Wildlife Adventure – Zodiac Boat</a></li>
-            <li><a href="">Custom Private Charters</a></li>
-            <li><a href="">About Us</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">Employment Opportunities</a></li>
-            <li><a href="">Privacy Policy</a></li>
+            <li><a href="#">Whale and Wildlife Adventure – Zodiac Boat</a></li>
+            <li><a href="#">Custom Private Charters</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Employment Opportunities</a></li>
+            <li><a href="#">Privacy Policy</a></li>
           </ul>
         </div>
       </div>
@@ -717,7 +717,7 @@
       </div>
     </div>
     <div class="copy-right">
-      <p>© Copyright 2025 <a href="">Blue Kingdom Whale & Wildlife Tours</a></p>
+      <p>© Copyright 2025 <a href="#">Blue Kingdom Whale & Wildlife Tours</a></p>
     </div>
   </footer>
   <!-- footer end -->
