--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BLUE KINDGOM</title>
+  <title>BLUE KINGDOM</title>
   <link rel="stylesheet" href="../dist/output.css" />
 
   <!-- Main custom css -->
