--- a/pages/index.html
+++ b/pages/index.html
@@ -655,7 +655,7 @@
           <div class="content uppercase text-white">
             <p>socila link</p>
           </div>
-          <ul class="flex gap-40 mt-14">
+          <ul class="flex items-center gap-40 mt-14">
             <li>
               <a href="#"><img src="../assets/image/instagram icon.png" alt="instagram" /></a>
             </li>
@@ -707,7 +707,7 @@
         </div>
         <form>
           <label for="email">Email Address <span class="text-red">*</span></label><br />
-          <input type="text" name="rmail" /><br />
+          <input type="text" name="email" /><br />
           <label for="fname">First Name</label><br />
           <input type="text" name="firstName" /><br />
           <label for="lname">Last Name</label><br />
