--- a/pages/index.html
+++ b/pages/index.html
@@ -160,14 +160,14 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <div class="img">
-            <a href=""><img src="../assets/image/image(1).png" alt="image" width="100%" height="250" /></a>
+            <a href="#"><img src="../assets/image/image(1).png" alt="image" width="100%" height="250" /></a>
             <div class="banner">
               <p>Most populer tour!</p>
             </div>
           </div>
           <div class="swiper-slide-content">
             <div class="title-blue-card">
-              <a href="">
+              <a href="#">
                 <h3>Whale and Wildlife<br>
                   Adventure -<br>
                   Zodiac Boat</h3>
@@ -449,7 +449,7 @@
       </div>
     </div>
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4 gap-20">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-20">
       <div class="reviews">
         <div class="review-date"><span>January 1</span></div>
         <div class="star">
@@ -484,7 +484,7 @@
           <img src="../assets/image/Postedon.png" alt="Postedon">
         </div>
       </div>
-      <div class="reviews hidden xl:block">
+      <div class="reviews hidden lg:block">
         <div class="review-date"><span>January 1</span></div>
         <div class="star">
           <img src="../assets/image/star icon.png" alt="star" width="20" height="20">
@@ -626,7 +626,7 @@
       <h2>Find us on the 'gram</h2>
       <button type="button" class="btn">follow us</button>
     </div>
-    <div class="grid grid-cols-2 xl:grid-cols-4 gap-2 p-20 md:ps-70">
+    <div class="grid grid-cols-2 lg:grid-cols-4 gap-2 p-20 xl:ps-70">
       <img src="../assets/image/find1.png" alt="image" width="363" height="363" class="gram-img" />
       <img src="../assets/image/find2.png" alt="image" width="363" height="363" class="gram-img" />
       <img src="../assets/image/find3.png" alt="image" width="363" height="363" class="gram-img" />
@@ -646,7 +646,7 @@
 
   <!-- footer -->
   <footer class="footer">
-    <div class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-60">
+    <div class=" grid grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-60">
       <div class="footer-menu">
         <div class="mb-55">
           <img src="../assets/image/logo.png" alt="logo" />
