--- a/pages/index.html
+++ b/pages/index.html
@@ -152,11 +152,11 @@
   <!-- compny-contact end -->
 
   <!-- populer-excursions -->
-  <section class="populer-excursions">
+  <section class="populer-excursions p-1">
     <div class="title w-full py-30 xl:mt-55">
       <h2>most populer excursions</h2>
     </div>
-    <div class="swiper populer-excursions-swiper container xl:mt-55">
+    <div class="swiper populer-excursions-swiper container xl:mt-55 ">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <div class="img">
@@ -311,7 +311,7 @@
               </li>
             </ul>
             <div class="flex gap-10 mt-5">
-              <a href="" class="btn-more px-60 sm:px-90  1450:px-150 2560:px-120">learn more</a>
+              <a href="" class="btn-more px-60 sm:px-90 1450:px-150 2560:px-120">learn more</a>
             </div>
           </div>
         </div>
@@ -352,7 +352,7 @@
   <!-- our boats end -->
 
   <!-- customer review -->
-  <section class="cursomer-review">
+  <section class="cursomer-review p-4">
     <div class="title title-blue">
       <p>customer review</p>
     </div>
