--- a/pages/index.html
+++ b/pages/index.html
@@ -321,7 +321,7 @@
       <div class="swiper-pagination"></div>
     </div>
 
-    <img src="../assets/image/wave.png" alt="" class="absolute bottom-0 w-screen" />
+    <img src="../assets/image/wave.png" alt="wave" class="absolute bottom-0 w-screen" />
   </section>
   <!-- populer-excursions end -->
 
