--- a/pages/index.html
+++ b/pages/index.html
@@ -311,7 +311,7 @@
               </li>
             </ul>
             <div class="flex gap-10 mt-5">
-              <a href="" class="btn-more px-60 sm:px-90 1450:px-150 2560:px-120">learn more</a>
+              <a href="" class="btn-more px-70 lg:px-90 xl:px-110">learn more</a>
             </div>
           </div>
         </div>
